fix text-align links

--- a/global.css
+++ b/global.css
@@ -139,6 +139,7 @@ footer {
 footer > * {
   margin: var(--s0) calc(var(--s1) * 2);
   flex: 1;
+  text-align: center;
 }
 footer > div {
   display: flex;
